Bug 383332 - keyboard audio shortcuts do not work
Summary: keyboard audio shortcuts do not work
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-09 19:05 UTC by Francesco
Modified: 2017-08-10 11:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco 2017-08-09 19:05:13 UTC
audio shortcut "+" , "-", "M" do not work in the version 2.0.12 of kaffeine
Comment 1 Mauro Carvalho Chehab 2017-08-10 11:19:22 UTC
(In reply to Francesco from comment #0)
> audio shortcut "+" , "-", "M" do not work in the version 2.0.12 of kaffeine

You can always reassign the keys by setting the shortcuts. Yet, you're right on one thing: the defaults aren't OK: right now, it would be expecting a sequence of keys, where the second key would be a media key. That will never work.

Just fixed it at -git.
Comment 2 Mauro Carvalho Chehab 2017-08-10 11:20:24 UTC
Git commit 4f7ec78d2f68078702903e50fd505a76dd62e4a3 by Mauro Carvalho Chehab.
Committed on 10/08/2017 at 11:15.
Pushed by mauroc into branch 'master'.

mediawidget: don't use key sequences as shortcut

QKeySequence is used to define a sequence of keys that should
be pressed in order for an action to occur, and not to set
alternate keys for an action.

Due to that, the default key maps for several actions don't
work.

Also, on modern desktops, the Keyboard's media keys are already
mapped by the window manager, with may prevent Qt to use them.

So, instead, just use keystrokes that exist on all keyboards,
as, if someone wants something different, it can change the
shortcuts via Kaffeine's menu.

Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>

M  +7    -7    src/mediawidget.cpp

https://commits.kde.org/kaffeine/4f7ec78d2f68078702903e50fd505a76dd62e4a3